# ns-lean4-pipeline

./: .gitignore  AUDIT.md  CITATION.cff  NOTATION.md  OPEN_QUESTIONS.md  README.md  REPRODUCE.md  requirements.txt
.github/workflows/: ci.yml
data/: PROVENANCE.md
data/bridge/: v3_bridge.csv  v5_bridge.csv
data/convergence/: convergence_assessment.md  convergence_summary.csv  convergence_table.md
data/crease_invariants/: compute_metrics.py  crease_invariants_report.md  metrics.csv  product_robust.csv  scaling_fit.csv  scaling_fit_at_Pmax.csv
data/onset/: onset_table.csv  re6400_extended.csv
data/snapshots/: README.md
lean/: NSLean4.lean  lake-manifest.json  lakefile.toml
lean/NSLean4/: NSCerts.lean  NSParams.lean  NSTheorems.lean
paper/: CLAUDE_NOTES.md  README.md  paper.tex
paraview/: convergence_multires.py  view_crease_t28.py
pipeline/: Makefile  extract_params.py  params.json  s1_gen_lean_defs.py  s6_gap_extract.py  s7_z3_certs.py  s8_z3_to_lean.py
solver/: ns_v5_reconnection.py
solver/ffi-fftw/: Cargo.toml  pyproject.toml
solver/ffi-fftw/python/: antiparallel_tubes_ic.py  phase10_convergence.py
solver/ffi-fftw/src/: kernel.rs  lib.rs
z3/: all_certs.smt2  results.json  run_z3.py
